# fastapi

./: README.md
projectOne/: Dockerfile  Makefile  pyproject.toml
projectOne/app/application/api/: main.py
projectOne/app/domain/entities/: base.py  messages.py
projectOne/app/domain/events/: base.py  messages.py
projectOne/app/domain/exceptions/: base.py  messages.py
projectOne/app/domain/values/: base.py  messages.py
projectOne/app/infra/repositories/: messages.py
projectOne/app/logic/: init.py  mediator.py
projectOne/app/logic/commands/: base.py  messages.py
projectOne/app/logic/events/: base.py
projectOne/app/logic/exceptions/: base.py  mediator.py  messages.py
projectOne/app/tests/domain/values/: test_messages.py
projectOne/app/tests/logic/: test_messages.py
