[tool.poetry]
name = "kafkaChat"
version = "0.1.0"
description = ""
authors = ["dauzhantok <dauzhan0123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.28.0"}
ipython = "^9.5.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonty.api"